--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asgiref==3.4.1
-Django==3.2
-pytz==2021.3
-sqlparse==0.4.2
-typing-extensions==4.0.1
-pip==19.0.3
-setuptools==40.8.0
+asgiref==3.7.2
+Django==4.2.7
+pytz==2023.3.post1
+sqlparse==0.4.4
+typing-extensions==4.8.*
+pip==23.3.*
+setuptools==68.2.2
